hphp/hack/test/typecheck/references/refs_in_array/foreach2.php.exp
File "foreach2.php", line 5, characters 24-26:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
